Fixed text-align of hero text

--- a/style.css
+++ b/style.css
@@ -226,7 +226,7 @@
   }
   
   .hero-text {
-    text-align: center;
+    text-align: left;
   }
   
   .hero h1 {
